Refactor for cmake submodule

--- a/libraries/state_db/CMakeLists.txt
+++ b/libraries/state_db/CMakeLists.txt
@@ -1,49 +1,53 @@
-file(GLOB HEADERS
-     "include/koinos/state_db/*.hpp"
-     "include/koinos/state_db/detail/*.hpp"
-     "include/koinos/state_db/backends/*.hpp"
-     "include/koinos/state_db/backends/map/*.hpp"
-     "include/koinos/state_db/backends/rocksdb/*.hpp")
-add_library(koinos_state_db
-            state_db.cpp
-            detail/state_delta.cpp
-            detail/merge_iterator.cpp
-            backends/backend.cpp
-            backends/iterator.cpp
-            backends/map/map_backend.cpp
-            backends/map/map_iterator.cpp
-            backends/rocksdb/rocksdb_backend.cpp
-            backends/rocksdb/rocksdb_iterator.cpp
-            backends/rocksdb/object_cache.cpp
-            ${HEADERS} )
+set(HEADERS
+  include/koinos/state_db/state_db_types.hpp
+  include/koinos/state_db/state_db.hpp
+  include/koinos/state_db/backends/backend.hpp
+  include/koinos/state_db/backends/exceptions.hpp
+  include/koinos/state_db/backends/iterator.hpp
+  include/koinos/state_db/backends/types.hpp
+  include/koinos/state_db/backends/map/map_backend.hpp
+  include/koinos/state_db/backends/map/map_iterator.hpp
+  include/koinos/state_db/backends/rocksdb/exceptions.hpp
+  include/koinos/state_db/backends/rocksdb/object_cache.hpp
+  include/koinos/state_db/backends/rocksdb/rocksdb_backend.hpp
+  include/koinos/state_db/backends/rocksdb/rocksdb_iterator.hpp
+  include/koinos/state_db/detail/merge_iterator.hpp
+  include/koinos/state_db/detail/state_delta.hpp)
 
-target_link_libraries(koinos_state_db Koinos::exception Koinos::proto Koinos::crypto RocksDB::rocksdb)
-target_include_directories(koinos_state_db PUBLIC
-   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-   $<INSTALL_INTERFACE:include>
+add_library(state_db
+  state_db.cpp
+  detail/state_delta.cpp
+  detail/merge_iterator.cpp
+  backends/backend.cpp
+  backends/iterator.cpp
+  backends/map/map_backend.cpp
+  backends/map/map_iterator.cpp
+  backends/rocksdb/rocksdb_backend.cpp
+  backends/rocksdb/rocksdb_iterator.cpp
+  backends/rocksdb/object_cache.cpp
+  ${HEADERS})
+
+target_link_libraries(
+  state_db
+    PUBLIC
+      Koinos::exception
+      Koinos::proto
+      Koinos::crypto
+      RocksDB::rocksdb)
+
+koinos_add_format_target(state_db)
+
+target_include_directories(
+  state_db
+    PUBLIC
+      $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+      $<INSTALL_INTERFACE:include>
 )
 
-add_library(Koinos::state_db ALIAS koinos_state_db)
-
-install(FILES ${HEADERS} DESTINATION "include/koinos/state_db")
-
-export(
-   TARGETS ${KOINOS_LIB_TARGET_NAME}
-   NAMESPACE Koinos::
-   FILE ${KOINOS_LIB_CMAKE_PROJECT_TARGETS_FILE}
-)
+add_library(Koinos::state_db ALIAS state_db)
 
 install(
-   TARGETS ${KOINOS_LIB_TARGET_NAME}
-   EXPORT ${KOINOS_LIB_TARGETS_EXPORT_NAME}
-   INCLUDES DESTINATION ${KOINOS_LIB_INCLUDE_INSTALL_DIR}
-   RUNTIME DESTINATION bin
-   LIBRARY DESTINATION lib
-   ARCHIVE DESTINATION lib
-)
-
-install(
-   EXPORT ${KOINOS_LIB_TARGETS_EXPORT_NAME}
-   NAMESPACE Koinos::
-   DESTINATION ${KOINOS_LIB_CONFIG_INSTALL_DIR}
-)
+  FILES
+    ${HEADERS}
+  DESTINATION
+    "include/koinos/state_db")
