--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,25 @@
 cmake_minimum_required(VERSION 3.19.0)
 
 cmake_policy(SET CMP0074 NEW)
-cmake_policy(SET CMP0135 NEW)
 cmake_policy(SET CMP0114 NEW)
-cmake_policy(SET CMP0144 NEW)
 
-include(cmake/Koinos.cmake)
+if(${CMAKE_VERSION} VERSION_GREATER_EQUAL 3.24.0)
+  cmake_policy(SET CMP0135 NEW)
+endif()
+
+if(${CMAKE_VERSION} VERSION_GREATER_EQUAL 3.27.0)
+  cmake_policy(SET CMP0144 NEW)
+endif()
+
+include(FetchContent)
+FetchContent_Declare(
+  koinos_cmake
+  GIT_REPOSITORY https://github.com/koinos/koinos-cmake.git
+  GIT_TAG        f3d5dd68611a515837b2a038cc93365ad12e8c41
+)
+FetchContent_MakeAvailable(koinos_cmake)
+
+include("${koinos_cmake_SOURCE_DIR}/Koinos.cmake")
 
 project(koinos_state_db
   VERSION 1.1.0
@@ -17,7 +31,7 @@ koinos_define_version()
 
 koinos_coverage(
   EXECUTABLE
-  koinos_statedb_tests
+    koinos_statedb_tests
   EXCLUDE
     "tests/*"
 )
@@ -45,43 +59,7 @@ koinos_add_package(koinos_util CONFIG REQUIRED)
 include(GNUInstallDirs)
 include(CMakePackageConfigHelpers)
 
-add_subdirectory(libraries)
+add_subdirectory(src)
 add_subdirectory(tests)
 
-export(
-  TARGETS state_db
-  NAMESPACE Koinos::
-  FILE ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-targets.cmake
-)
-
-install(
-  TARGETS state_db
-  EXPORT ${PROJECT_NAME}-targets
-  INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
-  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-)
-
-install(
-  EXPORT ${PROJECT_NAME}-targets
-  NAMESPACE Koinos::
-  DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}
-)
-
-configure_package_config_file(
-  cmake/Templates/project.cmake.in
-  ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config.cmake
-  INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME})
-
-write_basic_package_version_file(
-  ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config-version.cmake
-  VERSION ${PROJECT_VERSION}
-  COMPATIBILITY SameMajorVersion)
-
-install(
-  FILES
-    ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config.cmake
-    ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}-config-version.cmake
-  DESTINATION
-    ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME})
+koinos_install(TARGETS state_db)
