Cleanup CI and respect namespaces in src

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,11 @@ cache:
 addons:
   apt:
     packages:
-      - python3
-      - python3-pip
-      - python3-setuptools
+      - clang
+      - clang-format
+      - llvm
+      - lcov
+      - ruby
     update: true
 
 jobs:
@@ -17,8 +19,13 @@ jobs:
     - os: linux
       dist: jammy
       env:
+        - RUN_TIME=static-coverage
+        - MATRIX_EVAL="CC=clang && CXX=clang++"
+    - os: linux
+      dist: jammy
+      env:
         - RUN_TYPE=coverage
-        - MATRIX_EVAL="CC=clang-11 && CXX=clang++-11"
+        - MATRIX_EVAL="CC=clang && CXX=clang++"
     - os: linux
       dist: jammy
       env:
@@ -28,7 +35,7 @@ jobs:
       dist: jammy
       env:
         - RUN_TYPE=test
-        - MATRIX_EVAL="CC=clang-11 && CXX=clang++-11"
+        - MATRIX_EVAL="CC=clang && CXX=clang++"
 
 before_install:
   - eval "${MATRIX_EVAL}"
