--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: c++
 
 cache:
   ccache: true
-  pip: true
 
 addons:
   apt:
@@ -12,6 +11,9 @@ addons:
       - llvm
       - lcov
       - ruby
+      - gcc-12
+      - g++-12
+      - valgrind
     update: true
 
 jobs:
@@ -30,7 +32,7 @@ jobs:
       dist: jammy
       env:
         - RUN_TYPE=test
-        - MATRIX_EVAL="CC=gcc && CXX=g++"
+        - MATRIX_EVAL="CC=gcc-12 && CXX=g++-12"
     - os: linux
       dist: jammy
       env:
