--- a/.travis.yml
+++ b/.travis.yml
@@ -9,31 +9,38 @@ addons:
       - clang
       - clang-format
       - llvm
+      - llvm-dev
       - lcov
       - ruby
-      - gcc-12
-      - g++-12
-      - valgrind
-    update: true
 
 jobs:
   include:
-    - os: linux
+        - name: "Static Analysis"
+      os: linux
       dist: jammy
       env:
         - RUN_TYPE=static-analysis
         - MATRIX_EVAL="CC=clang && CXX=clang++"
-    - os: linux
+    - name: "Sanitizer"
+      os: linux
+      dist: jammy
+      env:
+        - RUN_TYPE=sanitizer
+        - MATRIX_EVAL="CC=clang && CXX=clang++"
+    - name: "Coverage"
+      os: linux
       dist: jammy
       env:
         - RUN_TYPE=coverage
         - MATRIX_EVAL="CC=clang && CXX=clang++"
-    - os: linux
+    - name: "GCC Unit Tests"
+      os: linux
       dist: jammy
       env:
         - RUN_TYPE=test
-        - MATRIX_EVAL="CC=gcc-12 && CXX=g++-12"
-    - os: linux
+        - MATRIX_EVAL="CC=gcc && CXX=g++"
+    - name: "Clang Unit Tests"
+      os: linux
       dist: jammy
       env:
         - RUN_TYPE=test
