--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,13 +7,13 @@ include(FetchContent)
 FetchContent_Declare(
   koinos_cmake
   GIT_REPOSITORY https://github.com/koinos/koinos-cmake.git
-  GIT_TAG        0c8433a118eb4cd5a86bb7ac4708a38db8166801)
+  GIT_TAG        v1.0.0)
 FetchContent_MakeAvailable(koinos_cmake)
 
 include("${koinos_cmake_SOURCE_DIR}/Koinos.cmake")
 
 project(koinos_state_db
-  VERSION 1.1.0
+  VERSION 1.1.1
   DESCRIPTION "The Koinos statedb library"
   LANGUAGES CXX C)
 
